lox-tests/tests/if/var_in_then.stderr
ERROR: at 'var': Expected expression, got Var
 --> 2:11
  |
2 | if (true) var foo;
  |           ^-^
